# census_income_classification

./: .gitignore  Exploratory_Data_Analysis.ipynb  Models.ipynb  README.md  data_cleaning.py  pyproject.toml
coding_task/: Exploratory_Data_Analysis.ipynb  Models.ipynb  Readme.MD  classifiers.py  data_cleaning.py  data_modification.py  utility.py
coding_task/models/: NN_classifier.py
data/: census_income_metadata.txt
