[tool.poetry]
name = "dataiku_task"
version = "0.1.0"
description = ""
authors = ["Marwan Mousa <marwan.mousa15@imperial.ac.uk>"]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
numpy = "^1.24.1"
scipy = "^1.10.0"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
torch = "^1.13.1"
ipympl = "^0.9.2"
jupyter = "^1.0.0"
imblearn = "^0.0"
shap = "^0.41.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
